# ziji

./: CMakeLists.txt  LICENSE  README.md  data_manager.py  helper.py  main.py  requirements.txt  ziji_param.json
data/data_local/global_data/: energybins
ziji_object/: __init__.py  black_disk.py  convol_return.py  corona.py  iterator.py  iterator_lp.py  parallel_executor.py  reflector.py  spectral_transit.py  ziji_param.json  ziji_param.py  ziji_utils.py
zijiray/: __init__.py  lpg.py  retrad.py  transit.py
zijiray/include/GR/: geodesic.h  metric.h
zijiray/include/lpg/: AdditionalFunc.h  global_var.h
zijiray/include/objects/: astro_objects.h  observer.h
zijiray/include/raytrace/: raygen.h  raypath.h
zijiray/include/return_rad/: isotropic.h
zijiray/include/transit/: AdditionalFunc.h
zijiray/include/utils/: RKF45.h  f_root.h  novikov_thorne.h  phys_constants.h  physics.h
zijiray/src/: main.cc
zijiray/src/GR/: geodesic.cc  metric.cc
zijiray/src/lpg/: main.cc
zijiray/src/raytrace/: raygen.cc  raypath.cc
zijiray/src/return_rad/: main.cc
zijiray/src/transit/: main.cc
zijiray/src/utils/: physics.cc
